fix: aggressively hide scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,13 +27,17 @@
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    /* Hide scrollbar for IE, Edge and Firefox */
+    /* Hide scrollbar for everywhere */
+      scrollbar-width: none;
+      /* Firefox */
     -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+  html {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
   }
-  
+
   /* Hide scrollbar for Chrome, Safari and Opera */
-  body::-webkit-scrollbar {
+    *::-webkit-scrollbar {
     display: none;
   }
 }
